# agents

./: .cursorrules  .gitignore  .pre-commit-config.yaml  CHECKPOINT.md  GEMINI.md  PRODUCT_ROADMAP.md  SESSION_NOTES.md  code_review.md  config.json  debug_cli.py  main.py  project_purpose.md  pyproject.toml  readme.md  suggestions.md  test_st.py  update_main.py
backend/: ai_client.py  calculations.py  config_loader.py  constants.py  dice.py  image_utils.py  pdf_exporter.py  prompts.py  schemas.py  state_manager.py  storage.py  ui_utils.py
backend/core/: ai_client.py  config_loader.py  constants.py  db.py  prompts.py  schemas.py  state_manager.py  storage.py
backend/repositories/: campaign_repository.py  character_repository.py  rules_repository.py  user_repository.py
backend/services/: dm_service.py  forge_service.py  mechanics_service.py  module_parser_service.py  rules_service.py
backend/utils/: api_client.py  auth_utils.py  dice.py  dnd_math.py  export_utils.py  google_docs.py  image_utils.py  import_utils.py  pdf_exporter.py  pdf_importer.py  ui_utils.py
data/campaigns/: the_sunless_citadel.json
data/characters/: barnaby_'barny'_crumblecrust_fe6aa87a.json  eldred_the_valiant.json  lyra_vesper.json
data/pdf_mappings/: standard_2024.json  standard_5e.json
scratch/: list_models.py
scripts/: fetch_and_seed_spells.py  seed_test_collab.py  test_gemini_connection.py
tests/: test_config_loader.py  test_dice.py  test_dice_extended.py  test_dm_service.py  test_dnd_math.py  test_forge_manual.py  test_image_utils.py  test_level_up.py  test_mechanics.py  test_mechanics_extended.py  test_module_parser.py  test_pdf_exporter.py  test_pdf_importer.py  test_repositories.py  test_rule_comparison.py  test_saved_characters.py  test_schemas.py  test_state_manager.py  test_storage_facade.py
views/: admin_view.py  dm_workspace.py  library_view.py  login_view.py  player_dashboard.py  settings_view.py
(+57 files in other folders)
