[project]
name = "agents"
version = "0.1.0"
description = ""
authors = [
    {name = "Dimitris Lolis",email = "dlolis88@gmail.com"}
]
requires-python = ">=3.13,<4.0"
dependencies = [
    "ruff (>=0.15.11,<0.16.0)",
    "google-genai (>=1.73.1,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "streamlit (>=1.56.0,<2.0.0)",
    "pypdf (>=6.10.2,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "reportlab (>=4.4.10,<5.0.0)",
    "pdfplumber (>=0.11.9,<0.12.0)",
    "pymongo[4-7] (>=4.17.0,<5.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "mongomock (>=4.3.0,<5.0.0)"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
